# prisoners-dilemma

./: .gitignore  README.md  database.py  game_engine.py  lib.py  main.py  makefile  pyproject.toml  schema.sql  test.ipynb  test_db.py  test_lib.py  test_script.py
routers/: matches.py  strategies.py  tournaments.py
scripts/: database_delete.sh  database_start.sh  init-db.sh  strategy_cli.sh
src/: match.py  models.py  strategy.py  tournament.py
static/: styles.css  styles2.css
strategies/: build_all.sh
strategies/always-cooperate/: Dockerfile  strategy.py
strategies/always-defect/: strategy.py
strategies/grudger/: strategy.py
strategies/pavlov/: Dockerfile  strategy.py
strategies/random/: strategy.py
strategies/tit-for-tat/: strategy.py
templates/: base.html  match_detail.html  strategies.html  tournament_detail.html  tournaments.html
