[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
docker = "^7.1.0"
asyncpg = "^0.30.0"
asyncpg-stubs = "^0.30.0"
sqlalchemy = "^2.0.38"
psycopg2-binary = "^2.9.10"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
ipython = "^8.32.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
