[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.1.0"
asyncpg-stubs = "^0.30.0"
loguru = "^0.7.3"
fastapi = {version = "^0.115.11", extras = ["standard"]}
sqlalchemy = {version = "^2.0.38", extras = ["postgresql-psycopg2binary", "postgresql-asyncpg"]}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
